# libgaminggear

./: .gitignore  CMakeLists.txt  Changelog  INSTALL  README  libgaminggear.spec
cmake_modules/: FindGTK.cmake  FindHARFBUZZ.cmake  FindHB.cmake  FindUSB1.cmake  INSTALL_CMAKE_MODULESDIR.cmake  INSTALL_LIBDIR.cmake  INSTALL_PKGCONFIGDIR.cmake  UHID.cmake  UINPUT.cmake
configuration/: CMakeLists.txt  FindGAMINGGEAR.cmake.in  gaminggear.conf.in  gaminggear.pc.in
gaminggearfxcontrol/: CMakeLists.txt  gaminggearfxcontrol.c
gaminggearfxinfo/: CMakeLists.txt  gaminggearfxinfo.c
icons/: CMakeLists.txt
include/: config.h.in
include/gaminggear/: CMakeLists.txt  evdev.h  gaminggear.h.in  gaminggear_device.h  gaminggear_fx_plugin.h  gaminggear_profile_table.h  gaminggear_xy_scales.h  gdk_key_translations.h  gfx.h  hid_uid.h  input_events.h  key_translations.h  libusb.h  macro_threads.h  screen_notificator.h  threads.h
libgaminggear/: CMakeLists.txt  gaminggear_audio_notificator_canberra.c  gaminggear_device.c  gaminggear_evdev.c  gaminggear_helper.c  gaminggear_helper.h  gaminggear_input_events_uhid.c  gaminggear_input_events_uinput.c  gaminggear_key_file.c  gaminggear_key_translations.c  gaminggear_libusb.c  gaminggear_macro_keystrokes.c  gaminggear_macro_thread.c  gaminggear_macro_thread.h  gaminggear_macro_threads.c  gaminggear_macros.c  gaminggear_macros.h  gaminggear_profile_data.c  gaminggear_screen_notificator_notify.c  macros_converter_roccat.c  macros_converter_roccat.h  macros_converter_roccat_arvo.c  macros_converter_roccat_arvo.h  macros_converter_roccat_kone.c  macros_converter_roccat_kone.h  macros_converter_roccat_swarm.c  macros_converter_roccat_valo.c  macros_converter_roccat_valo.h  macros_converter_steelseries_engine3.c  macros_converter_steelseries_engine3.h
libgaminggearfx/: CMakeLists.txt  gaminggear_fx.c
libgaminggearwidget/: CMakeLists.txt  gaminggear_about_dialog.c  gaminggear_dialogs.c  gaminggear_dscale.c  gaminggear_gdk_key_translations.c  gaminggear_hscale.c  gaminggear_macro_dialog.c  gaminggear_macro_editor.c  gaminggear_macro_editor_advanced.c  gaminggear_macro_editor_advanced_list_store.c  gaminggear_macro_editor_advanced_list_store.h  gaminggear_macro_editor_advanced_table.c  gaminggear_macro_editor_basic.c  gaminggear_macro_editor_basic_list_store.c  gaminggear_macro_editor_basic_list_store.h  gaminggear_macro_editor_basic_tree_view.c  gaminggear_macro_editor_dialog.c  gaminggear_macro_editor_dialog_internal.h  gaminggear_macro_editor_dialog_menu_bar.c  gaminggear_macro_editor_interface.c  gaminggear_macro_editor_interface.h  gaminggear_macro_editor_key_sequence_frame.c  gaminggear_macro_editor_key_sequence_frame.h  gaminggear_macro_editor_macro_options_frame.c  gaminggear_macro_editor_macros_frame.c  gaminggear_macro_editor_record_options_frame.c  gaminggear_macro_editor_record_options_frame.h  gaminggear_macro_tree_store.c  gaminggear_macro_tree_view.c  gaminggear_profile_page.c  gaminggear_profile_table.c  gaminggear_ruler.c  gaminggear_text_dialog.c  gaminggear_timeout_bar.c  gaminggear_timeout_bar.h  gaminggear_timeout_dialog.c  gaminggear_timeout_dialog.h  gaminggear_xy_scales.c
po/: CMakeLists.txt  de.po  en.po  libgaminggear.pot
