CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/gaminggear.conf.in ${CMAKE_CURRENT_BINARY_DIR}/gaminggear.conf)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/gaminggear.conf
  DESTINATION /etc/ld.so.conf.d
  RENAME gaminggear-${V_MAJOR}.conf
)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/gaminggear.pc.in ${CMAKE_CURRENT_BINARY_DIR}/gaminggear.pc @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/gaminggear.pc
  DESTINATION ${INSTALL_PKGCONFIGDIR}
  RENAME gaminggear-${V_MAJOR}.pc
)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/FindGAMINGGEAR.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/FindGAMINGGEAR.cmake @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/FindGAMINGGEAR.cmake
  DESTINATION ${INSTALL_CMAKE_MODULESDIR}
  RENAME FindGAMINGGEAR${V_MAJOR}.cmake
)
